objects/APTS_Quotation_Clone_Properties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to configure quotation clone</description>
    <fields>
        <fullName>APTS_Fields_to_be_Nullify_Oppty__c</fullName>
        <description>comma separated opportunity fields to be cleared on clone</description>
        <inlineHelpText>comma separated opportunity fields to be cleared on clone</inlineHelpText>
        <label>APTS Fields to be Nullify Oppty</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Fields_to_be_Nullify__c</fullName>
        <description>comma separated quote field names to be cleared on clone</description>
        <inlineHelpText>comma separated quote field names to be cleared on clone</inlineHelpText>
        <label>Fields to be Nullify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Fields_to_display_Templates__c</fullName>
        <description>Template Quotation fields to display on create Quotation from Opportunity</description>
        <inlineHelpText>Template Quotation fields to display on create Quotation from Opportunity</inlineHelpText>
        <label>Fields to display Templates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Fields_to_display_line_items__c</fullName>
        <description>Line Items fields to display on Clone with line items</description>
        <inlineHelpText>Line Items fields to display on Clone with line items</inlineHelpText>
        <label>Fields to display line items</label>
        <type>TextArea</type>
    </fields>
    <label>Quotation Clone Properties</label>
</CustomObject>